rdfa Parse implementiert
Kleine Demo auf Stackoverflow:
Anhand der Tags werden beim Klick auf das Plugin Icon ähnliche Fragen vorgeschlagen.
Dazu müsste ihr natürlich erst mal ein bisschen auf Stackoverflow rumsrufen um den Graphen zu füllen.

--- a/src/plugin/popup.html
+++ b/src/plugin/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Test Popup</title>
+    <meta charset='utf-8'> 
     <style>
       body {
         min-width: 357px;
@@ -22,8 +23,10 @@
       - Policy documentation[1] for details and explanation.
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
+    -->
+    <script src="js/libs/jquery-1.9.0/jquery.min.js"></script>
     <script src="popup.js"></script>
-     -->
+     
 
   </head>
   <body>
