--- a/src/plugin/popup.html
+++ b/src/plugin/popup.html
@@ -3,6 +3,7 @@
   <head>
     <title>Test Popup</title>
     <meta charset='utf-8'> 
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <style>
       body {
         min-width: 357px;
@@ -30,8 +31,9 @@
 
   </head>
   <body>
-      <button id="showGraph">Graph</button>
-        <p>Not implemented </p>
+      <img id="topImage" src="" alt="">
+      <h4 id="heading">Heading</h4>
+      <div id="content">Fill Me</div>
   </body>
 </html>
 
