--- a/src/plugin/popup.html
+++ b/src/plugin/popup.html
@@ -28,7 +28,7 @@
     <script src="js/libs/jquery-1.9.0/jquery.min.js"></script>
     <script src="popup.js"></script>
      
-
+<base target="_blank" />
   </head>
   <body>
       <img id="topImage" src="" alt="">
