JSON Parser angepast

--- a/src/plugin/popup.html
+++ b/src/plugin/popup.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" id="sgvzlr_script" src="js/libs/sgvizler-0.5/sgvizler.js"></script>
     <script src="geo.js"></script>
     <script src="stackoverflow.js"></script>
+    <script src="js/jsonSimilarArtworks.js"></script>
     <script src="js/microdataPopup.js"></script>
     <script src="popup.js"></script>
      
